--- a/MIPS.qsf
+++ b/MIPS.qsf
@@ -39,7 +39,7 @@
 
 set_global_assignment -name FAMILY "Cyclone IV E"
 set_global_assignment -name DEVICE EP4CE115F29C7
-set_global_assignment -name TOP_LEVEL_ENTITY MIPS
+set_global_assignment -name TOP_LEVEL_ENTITY ULA
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 16.0.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "14:48:41  NOVEMBER 07, 2017"
 set_global_assignment -name LAST_QUARTUS_VERSION 16.0.0
@@ -60,3 +60,14 @@ set_global_assignment -name VHDL_FILE mux_4to1.vhd
 set_global_assignment -name VHDL_FILE mux_2to1.vhd
 set_global_assignment -name VHDL_FILE full_adder_1bit.vhd
 set_global_assignment -name VHDL_FILE and_port.vhd
+set_global_assignment -name VHDL_FILE full_adder.vhd
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name VHDL_FILE slt.vhd
+set_global_assignment -name VHDL_FILE banco_registradores.vhd
+set_global_assignment -name VHDL_FILE mux_2to1_5bits.vhd
+set_global_assignment -name VHDL_FILE memoria_de_dados.vhd
+set_global_assignment -name VHDL_FILE register32.vhd
+set_global_assignment -name VHDL_FILE MIPS.vhd
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
