--- a/MIPS.qsf
+++ b/MIPS.qsf
@@ -53,18 +53,18 @@ set_global_assignment -name EDA_TIME_SCALE "1 ps" -section_id eda_simulation
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "VERILOG HDL" -section_id eda_simulation
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
-set_global_assignment -name VHDL_FILE ULA.vhd
-set_global_assignment -name VHDL_FILE or_port.vhd
-set_global_assignment -name VHDL_FILE not_port.vhd
-set_global_assignment -name VHDL_FILE mux_4to1.vhd
-set_global_assignment -name VHDL_FILE mux_2to1.vhd
-set_global_assignment -name VHDL_FILE full_adder_1bit.vhd
-set_global_assignment -name VHDL_FILE and_port.vhd
-set_global_assignment -name VHDL_FILE full_adder.vhd
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_global_assignment -name VHDL_FILE slt.vhd
+set_global_assignment -name VHDL_FILE ULA/ULA.vhd
+set_global_assignment -name VHDL_FILE ULA/slt.vhd
+set_global_assignment -name VHDL_FILE ULA/or_port.vhd
+set_global_assignment -name VHDL_FILE ULA/not_port.vhd
+set_global_assignment -name VHDL_FILE ULA/mux_4to1.vhd
+set_global_assignment -name VHDL_FILE ULA/mux_2to1.vhd
+set_global_assignment -name VHDL_FILE ULA/full_adder_1bit.vhd
+set_global_assignment -name VHDL_FILE ULA/full_adder.vhd
+set_global_assignment -name VHDL_FILE ULA/and_port.vhd
 set_global_assignment -name VHDL_FILE banco_registradores.vhd
 set_global_assignment -name VHDL_FILE mux_2to1_5bits.vhd
 set_global_assignment -name VHDL_FILE memoria_de_dados.vhd
