--- a/MIPS.qsf
+++ b/MIPS.qsf
@@ -39,7 +39,7 @@
 
 set_global_assignment -name FAMILY "Cyclone IV E"
 set_global_assignment -name DEVICE EP4CE115F29C7
-set_global_assignment -name TOP_LEVEL_ENTITY ULA
+set_global_assignment -name TOP_LEVEL_ENTITY MIPS
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 16.0.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "14:48:41  NOVEMBER 07, 2017"
 set_global_assignment -name LAST_QUARTUS_VERSION "17.0.0 LITE EDITION"
