--- a/MIPS.qsf
+++ b/MIPS.qsf
@@ -1255,4 +1255,5 @@ set_global_assignment -name VHDL_FILE conversor7seg.vhd
 set_global_assignment -name CDF_FILE output_files/Chain8.cdf
 set_global_assignment -name VECTOR_WAVEFORM_FILE output_files/Waveform.vwf
 set_global_assignment -name CDF_FILE output_files/Chain1.cdf
+set_global_assignment -name CDF_FILE output_files/Chain2.cdf
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
